KAADO-14: Create homepage skeleton

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,13 @@
   padding: 0;
   margin: 0;
 }
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+body {
+  display: grid;
+  justify-items: center;
+}
