--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,19 +1,44 @@
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
+.home {
+  width: 400px;
   min-height: 100vh;
+  padding: 1rem;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  gap: 1rem;
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.title {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.panel {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.button {
+  width: 1.5rem;
+  height: 1.5rem;
+  padding: 0.1rem 0.4rem;
+  border: 1px solid black;
+  border-radius: 2rem;
+}
+
+.cards {
+  justify-self: center;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.message {
+  padding: 1rem;
+  align-self: center;
 }
