--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,15 +1,12 @@
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body {
   display: grid;
   justify-items: center;
+}
+
+.homebtn {
+  @apply w-6 h-6 cursor-pointer;
 }
